# single_cell_proteomics_study

./: .gitignore  .gitignore.swp  README.md  TSP_cell_cycle_analysis.ipynb  pyproject.toml  tox.ini
bioexperiment/data/: loader.py  loader_definitions.py  preprocess.py
bioexperiment/experiments/: base_experiment.py  proteomics_experiment.py
bioexperiment/visualizations/: config.py  plots.py
