[tool.poetry]
name = "bioexperiment"
version = "0.1.0"
description = "Experiment on proteomics data."
authors = ["Bojana Pocuca"]
readme = "README.md"
packages = [{ include = "bioexperiment" }]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
anndata = "^0.8.0"
scanpy = "^1.9.1"
seaborn = "^0.12.2"
matplotlib = "^3.6.3"
scikit-learn = "^1.2.0"
scipy = "^1.10.0"
openpyxl = "^3.0.10"

[tool.poetry.group.dev.dependencies]
tox = "^4.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
